--- a/master_thesis/front/abbreviations.tex
+++ b/master_thesis/front/abbreviations.tex
@@ -1,12 +1,12 @@
 \acrodef{SDK}{Software Development Kit}
 \acrodef{SIMD}{Single Instruction Multiple Data}
-\acrodef{HPC}{high performance computing}
+\acrodef{HPC}{High Performance Computing}
 \acrodef{DG}{Discontinuous Galerkin}
-\acrodef{PDE}{partial differential equations}
+\acrodef{PDE}{Partial Differential Equations}
 \acrodef{DGTD}{Nodal Discontinuous Galerkin Method in Time Domain}
 \acrodef{MIDG2}{Mini Discontinuous Galerkin Maxwells Time-domain Solver}
 \acrodef{ODE}{ordinary differential equations}
-\acrodef{MPI}{Message passing interface}
+\acrodef{MPI}{Message Passing Interface}
 \acrodef{PCIe}{peripheral component interconnect express}
 \acrodef{QSFP}{Quad Small Form-factor Pluggable}
 \acrodef{HDL}{Hardware Description Language}
