--- a/master_thesis/references.bib
+++ b/master_thesis/references.bib
@@ -535,7 +535,7 @@ Dans cet article on décrit une nouvelle approche Galerkin Discontinu d'ordre sp
 	month = may,
 	year = {2019},
 	pages = {191},
-	file = {Intel® FPGA SDK for OpenCL™ Pro Edition Best Pract.pdf:C\:\\Users\\gaura\\Zotero\\storage\\63WJ82FC\\Intel® FPGA SDK for OpenCL™ Pro Edition Best Pract.pdf:application/pdf}
+	file = {Intel® FPGA SDK for OpenCL Pro Edition Best Pract.pdf:C\:\\Users\\gaura\\Zotero\\storage\\63WJ82FC\\Intel® FPGA SDK for OpenCL Pro Edition Best Pract.pdf:application/pdf}
 }
 
 @techreport{noauthor_intel_2018,
@@ -546,7 +546,7 @@ Dans cet article on décrit une nouvelle approche Galerkin Discontinu d'ordre sp
 	institution = {Intel},
 	month = sep,
 	year = {2018},
-	file = {Intel® FPGA SDK for OpenCL™ Pro Edition  Programmi.pdf:C\:\\Users\\gaura\\Zotero\\storage\\C4UM9AZC\\Intel® FPGA SDK for OpenCL™ Pro Edition  Programmi.pdf:application/pdf}
+	file = {Intel® FPGA SDK for OpenCL Pro Edition  Programmi.pdf:C\:\\Users\\gaura\\Zotero\\storage\\C4UM9AZC\\Intel® FPGA SDK for OpenCL Pro Edition  Programmi.pdf:application/pdf}
 }
 
 @techreport{noauthor_intel_2019_prog,
@@ -558,7 +558,7 @@ Dans cet article on décrit une nouvelle approche Galerkin Discontinu d'ordre sp
 	month = apr,
 	year = {2019},
 	pages = {212},
-	file = {Intel® FPGA SDK for OpenCL™ Pro Edition Programmin.pdf:C\:\\Users\\gaura\\Zotero\\storage\\MMG44DAB\\Intel® FPGA SDK for OpenCL™ Pro Edition Programmin.pdf:application/pdf}
+	file = {Intel® FPGA SDK for OpenCL Pro Edition Programmin.pdf:C\:\\Users\\gaura\\Zotero\\storage\\MMG44DAB\\Intel® FPGA SDK for OpenCL Pro Edition Programmin.pdf:application/pdf}
 }
 
 @misc{forstner_discontinuous_nodate,
