--- a/master_thesis/front/abstract.tex
+++ b/master_thesis/front/abstract.tex
@@ -1,5 +1,11 @@
 \chapter{Abstract}
 
 
-This should be a 1-page (maximum) summary of your work in English.
+FPGA based accelerators provide the flexibility to adapt to application characteristics and are becoming popular among the high performance computing community. The Noctua HPC cluster at the Paderborn Center for Parallel Computing (PC2) contains 16 high performance nodes equipped with Nallatech 520N,Stratix 10 FPGA accelerator boards. These boards add a huge processing speedup capabilities with the Stratix 10 FPGA and also provides 4 100/40/25/10G QSFP28 network ports for serial FPGA-to-FPGA communication.
+
+This thesis first evaluates the possible point-to-point topologies between FPGAs using the 4 ports by implementing prototypes for 2 different topologies.
+The evaluation shows that the point-to-point communication can achieve a 10 times higher communication bandwidth then the existing MPI+PCIe communication.
+The point-to-point communication also has a higher efficiency of 99.4\% compared to 60\% for the MPI+PCIe. The point-to-point communication is also implemented for MIDG2 MPI FPGA application which uses DG method to solve Maxwell’s equation in time domain
+using multiple FPGAs. The existing OpenCL kernels are extended to use the point-to-point communication with 2 and 4 FPGAs and an optimized OpenCL kernel design is implemented to eliminate overheads due to FPGA to CPU interactions. The evaluation show that 20\% to 40\% improvement in the execution time of the application is achieved allowing the FPGA design to achieve linear speedup for scaling over 2 and 4 FPGAs.
+
 
