--- a/master_thesis/main.tex
+++ b/master_thesis/main.tex
@@ -53,7 +53,7 @@ to an accelerator for the Discontinuous Galerkin method}
 %%%----------------------------------------------------------
 
 %%%----------------------------------------------------------
-\frontmatter							% title part (roman page numbers)
+\frontmatter                % title part (roman page numbers)
 %%%----------------------------------------------------------
 
 \maketitle
@@ -64,7 +64,7 @@ to an accelerator for the Discontinuous Galerkin method}
 
 
 %%%----------------------------------------------------------
-\mainmatter          			% main part (arabic page numbers)
+\mainmatter                 % main part (arabic page numbers)
 %%%----------------------------------------------------------
 
 \include{chapters/introduction}
@@ -102,11 +102,11 @@ to an accelerator for the Discontinuous Galerkin method}
 \listoftodos
 
 %%%----------------------------------------------------------
-\MakeBibliography                        				% references
+\MakeBibliography                                % references
 %%%----------------------------------------------------------
 
 %%% special page for checking print size --------------------
-\include{back/printbox}
+% \include{back/printbox}
 
 %%%----------------------------------------------------------
 \end{document}
