--- a/master_thesis/front/abstract.tex
+++ b/master_thesis/front/abstract.tex
@@ -4,7 +4,7 @@ FPGA based accelerators provide the flexibility to adapt to application
 characteristics and are becoming popular among the high performance computing
 community. The Noctua HPC cluster at the Paderborn Center for Parallel
 Computing (PC\textsuperscript{2}) contains 16 high performance nodes
-equipped with Nallatech 520N,Stratix 10 FPGA accelerator boards.
+equipped with BittWare 520N, Stratix 10 FPGA accelerator boards.
 These boards add a huge processing speedup capabilities with the Stratix 10
 FPGA and provides 4 100/40/25/10G QSFP28 network ports for serial FPGA-to-FPGA
 communication.
