--- a/master_thesis/main.tex
+++ b/master_thesis/main.tex
@@ -99,7 +99,7 @@ to an accelerator for the Discontinuous Galerkin method}
 \addcontentsline{toc}{chapter}{\listtablename}
 \listoftables
 
-\listoftodos
+% \listoftodos
 
 %%%----------------------------------------------------------
 \MakeBibliography                                % references
